--- a/custom.css
+++ b/custom.css
@@ -149,3 +149,7 @@ html {
 		padding-left: 0.5em;
 	}
 }
+
+.banner .banner-body {
+	padding: 0;
+}
