--- a/portfolio.css
+++ b/portfolio.css
@@ -117,3 +117,7 @@ a {
     flex-direction: column;
     align-items: center;
 }
+
+.banner .banner-body {
+	padding: 0;
+}
